# primme-rs

./: .gitmodules  Cargo.toml  build.rs  scipy_primme_comparison.ipynb
benches/: smallest_eigenvalues.rs
src/: lib.rs
